# firefox

./: .gitignore  CARCINIZE.md  COMPONENT_ANALYSIS_ATOLL.md  COMPONENT_ANALYSIS_CHAOSMODE.md  COMPONENT_ANALYSIS_FLOATINGPOINT.md  COMPONENT_ANALYSIS_HASHBYTES.md  COMPONENT_ANALYSIS_PORT10.md  COMPONENT_ANALYSIS_PORT11.md  COMPONENT_ANALYSIS_PORT12.md  COMPONENT_ANALYSIS_PORT13.md  COMPONENT_ANALYSIS_PORT14.md  COMPONENT_ANALYSIS_PORT7.md  COMPONENT_ANALYSIS_PORT8.md  COMPONENT_ANALYSIS_XORSHIFT.md  COMPONENT_SELECTION_REPORT.md  COMPONENT_SELECTION_REPORT_PORT10.md  COMPONENT_SELECTION_REPORT_PORT11.md  COMPONENT_SELECTION_REPORT_PORT12.md  COMPONENT_SELECTION_REPORT_PORT13.md  COMPONENT_SELECTION_REPORT_PORT14.md  COMPONENT_SELECTION_REPORT_PORT3.md  COMPONENT_SELECTION_REPORT_PORT4.md  COMPONENT_SELECTION_REPORT_PORT5.md  COMPONENT_SELECTION_REPORT_PORT6.md  COMPONENT_SELECTION_REPORT_PORT7.md  COMPONENT_SELECTION_REPORT_PORT8.md  COMPONENT_SELECTION_REPORT_PORT9.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_XORSHIFT.md  PORT10_COMPLETE.md  PORT11_COMPLETE.md  PORT12_COMPLETE.md  PORT13_COMPLETE.md  PORT4_IMPLEMENTATION_SUMMARY.md  PORT5_IMPLEMENTATION_SUMMARY.md  PORT6_IMPLEMENTATION_SUMMARY.md  PORT7_IMPLEMENTATION_SUMMARY.md  PORT9_SUMMARY.md  PORT_SUMMARY_CHAOSMODE.md  QUICK_START.md  (+12 more)
local/: .gitignore  IMPLEMENTATION_NOTES.md  README.md  SUMMARY.md  UPSTREAM_TRACKING.md  local.mozbuild  moz.build  mozconfig.rust-arrayutils  mozconfig.rust-asciimask  mozconfig.rust-chaosmode  mozconfig.rust-dafsa  mozconfig.rust-floatingpoint  mozconfig.rust-hashbytes  mozconfig.rust-jsonwriter  mozconfig.rust-nscrt  mozconfig.rust-observer-array  mozconfig.rust-refcounted  mozconfig.rust-tarray  mozconfig.rust-unused  mozconfig.rust-utf8-validator  mozconfig.rust-xorshift128plus
local/cargo-patches/: arrayutils-deps.toml  asciimask-deps.toml  chaosmode-deps.toml  floatingpoint-deps.toml  hashbytes-deps.toml  jsonwriter-deps.toml  nscrt-deps.toml  observer-array-deps.toml  refcounted-deps.toml  shared-deps.toml  tarray-deps.toml  unused-deps.toml  utf8-validator-deps.toml  xorshift128plus-deps.toml
local/rust/: Cargo.toml
local/rust/firefox_arrayutils/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_arrayutils/src/: ffi.rs  lib.rs
local/rust/firefox_asciimask/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_asciimask/src/: ffi.rs  lib.rs
local/rust/firefox_atoll/: Cargo.toml  cbindgen.toml
local/rust/firefox_atoll/src/: lib.rs
local/rust/firefox_chaosmode/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_chaosmode/src/: ffi.rs  lib.rs  tests.rs
local/rust/firefox_dafsa/: Cargo.toml  cbindgen.toml
local/rust/firefox_dafsa/src/: ffi.rs  lib.rs
local/rust/firefox_floatingpoint/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_floatingpoint/src/: ffi.rs  lib.rs
local/rust/firefox_hashbytes/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_hashbytes/src/: ffi.rs  lib.rs  tests.rs
local/rust/firefox_jsonwriter/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_jsonwriter/src/: ffi.rs  lib.rs
local/rust/firefox_nscrt/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_nscrt/src/: ffi.rs  lib.rs
local/rust/firefox_observer_array/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_observer_array/src/: ffi.rs  lib.rs  tests.rs
local/rust/firefox_refcounted/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_refcounted/src/: ffi.rs  lib.rs  tests.rs
local/rust/firefox_tarray/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_tarray/src/: ffi.rs  lib.rs
local/rust/firefox_unused/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_unused/src/: lib.rs
local/rust/firefox_utf8_validator/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_utf8_validator/src/: ffi.rs  lib.rs  tests.rs
local/rust/firefox_xorshift128plus/: Cargo.toml  README.md  cbindgen.toml
local/rust/firefox_xorshift128plus/src/: ffi.rs  lib.rs
local/scripts/: apply-build-overlays.sh  generate-arrayutils-header.py  generate-asciimask-header.py  generate-chaosmode-header.py  generate-dafsa-header.py  generate-floatingpoint-header.py  generate-hashbytes-header.py  generate-jsonwriter-header.py  generate-nscrt-header.py  generate-observer-array-header.py  generate-tarray-header.py  generate-unused-header.py  generate-utf8-validator-header.py  generate-xorshift128plus-header.py  mach-rust  test-overlay-system.sh
mfbt/: Unused.cpp  Utf8.cpp  moz.build
xpcom/ds/: nsArrayUtils.cpp  nsCRT.cpp  nsTArray.cpp  nsTObserverArray.cpp
xpcom/string/: nsASCIIMask.cpp
