[workspace]
# Local Rust workspace for downstream Firefox customizations
# This workspace is separate from the main Firefox Cargo.toml to avoid conflicts
resolver = "2"

members = [
    "firefox_dafsa",
    "firefox_chaosmode",
    "firefox_xorshift128plus",
    "firefox_hashbytes",
    "firefox_floatingpoint",
    "firefox_utf8_validator",
    "firefox_jsonwriter",
    "firefox_observer_array",
    "firefox_nscrt",
    "firefox_asciimask",
    "firefox_tarray",
    "firefox_arrayutils",
    "firefox_unused",
    "firefox_refcounted",
]

# Workspace-wide dependency specifications
[workspace.dependencies]

[patch.crates-io]
# Local patches if needed
# Add any crate patches here that are specific to local components
