[package]
name = "firefox_xorshift128plus"
version = "0.1.0"
edition = "2021"
authors = ["Firefox Contributors"]
license = "MPL-2.0"
description = "Rust port of Firefox's XorShift128+ PRNG (mfbt/XorShift128PlusRNG.h)"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
